@@ -1,0 +1,12 @@
+<h1 class="title">Keep in contact with Empathy IM</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Empathy IM is Ubuntu's instant messaging tool.</li>
+	<li>Empathy connects to all the major IM networks, so you only ever need to learn one interface.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/empathy.png" alt="" />
