@@ -35,7 +35,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 		<div><a href="fspot.html" class="load"></a></div>
 		<div><a href="accessibility.html" class="load"></a></div>
 		<div><a href="evolution.html" class="load"></a></div> 
-		<div><a href="pidgin.html" class="load"></a></div>
+		<div><a href="empathy.html" class="load"></a></div>
 		<div><a href="openoffice.html" class="load"></a></div>
 		<div><a href="rhythmbox-totem.html" class="load"></a></div>
 		<div><a href="installing-software.html" class="load"></a></div>
